# titan-infinite

./: README.md
data/shaders/: debug_draw.frag  particle.comp  pbr.frag  pbr.frag.spv  skybox.vert
data/shaders/hlsl/: closethit.rchit  raygen.rgen
titan-infinite/: CMakeLists.txt  titan-infinite.sln  titan-infinite.vcxproj
titan-infinite/data/shaders/: compile.bat  debug_draw.frag  debug_draw.frag.spv  debug_draw.vert  debug_draw.vert.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  skybox.frag  skybox.vert.spv  test.vert  vert.spv
titan-infinite/src/: app.h  buffer.cpp  buffer.h  camera.h  command.h  command_pool.h  descriptor_pool.h  device.cpp  device.h  gui.cpp  gui.h  inverse_kinematics.cpp  inverse_kinematics.h  line_segment.h  main.cpp  main.h  memory.cpp  memory.h  mesh.cpp  mesh.h  model.cpp  model.h  pch.cpp  pch.h  renderer.cpp  renderer.h  skybox.cpp  skybox.h  spline.cpp  spline.h  swapchain.h  texture.cpp  texture.h  timer.cpp  timer.h  timer_windows.cpp  transform.cpp  transform.h  vkHelpers.cpp  vkHelpers.h  (+1 more)
titan-infinite/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_widgets.cpp
titan-infinite/unit-tests/animation/src/: animation.cpp
titan-infinite/unit-tests/particle/src/: particle.cpp
titan-infinite/unit-tests/path_following/src/: path_following.cpp
titan-infinite/unit-tests/raytracing/src/: raytracing.cpp
unit-tests/raytracing/: raytracing.cpp
